2001-02-20  Lennart Staflin  <lennarts@infostream.no>

	* psgml-dtd.el (sgml-check-content): check case of declared
	content name.
	(sgml-parse-exception): fix misspelled function name
	(sgml-declare-entity): Fix wrong case on symbols
	(sgml-parse-entity-type): for consistency, don't downcase entity
	type name
	(sgml-parse-entity-type): Remove case check and intern for
	notation name. Notation name will be stored as a string.

	* psgml-other.el (sgml-without-change-hooks): new macro
	(sgml-set-face-for): use new macro

e2001-02-20  Lennart Staflin  <lennarts@infostream.no>

	* psgml-parse.el (sgml-push-to-entity): remove debugging code
	(sgml-set-initial-state): Change to use change hooks

Fri Feb  9 01:06:27 2001  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.2.2 released

	* psgml.el (sgml-mode-map): Bind (meta control h) instead of ESC
	C-h, avoids redefining M-BS

Thu Feb  8 20:08:47 2001  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-info.el: Add provide psgml-info

Sun Oct 22 17:29:53 2000  Marc-Antoine Parent
	
	* patch from Marc-Antoine Parent
	
	* psgml-edit.el (sgml-read-attribute-value): include the element name, thus:
	Value for {attribute name} in {element name} ({type} {Default}):


2000-10-11  Lennart Staflin  <lennarts@infotek.no>

	* psgml-edit.el (sgml-indent-line): new strategy for identifying
	elements

2000-09-06  Lennart Staflin  <lennarts@infotek.no>

	* psgml-api.el (sgml-map-content): Use sgml-with-parser-syntax-ro

	* psgml-parse.el (sgml-find-start-point): renamed to
	sgml-goto-start-point, to indicate that this actually changes the
	point and buffer. And should always be called inside
	sgml-with-parser-syntax.
	(sgml-with-parser-syntax-ro): As sgml-with-parser-syntax also
	handle restoring buffer modification state.
	(sgml-last-buffer): New state variable
	(sgml-with-parser-syntax): set sgml-last-buffer
	(sgml-mainbuf-point): new function
	(sgml-max-pos-in-tree): new function