@@ -1,3 +1,13 @@
+Wed Feb 21 23:30:07 2001  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml-parse.el (sgml-parse-to): remove debug code
+
+	* psgml-edit.el (sgml-fold-region): use sgml-without-change-hooks
+	(sgml-normalize): use sgml-without-before-change-hooks
+
+	* psgml-other.el (sgml-without-before-change-hooks): new
+	* psgml-lucid.el (sgml-without-before-change-hooks): dito
+
 2001-02-20  Lennart Staflin  <lennarts@infostream.no>
 
 	* psgml-dtd.el (sgml-check-content): check case of declared
@@ -11,8 +21,6 @@
 
 	* psgml-other.el (sgml-without-change-hooks): new macro
 	(sgml-set-face-for): use new macro
-
-e2001-02-20  Lennart Staflin  <lennarts@infostream.no>
 
 	* psgml-parse.el (sgml-push-to-entity): remove debugging code
 	(sgml-set-initial-state): Change to use change hooks
